--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -24,13 +24,13 @@
 #   Grégoire Colbert <gregus@linux-mandrake.com>, 2001.
 #   Tobias Quathamer <toddy@debian.org>, 2007, 2008.
 # Alban Vidal <alban.vidal@zordhak.fr>, 2018.
-# Baptiste Jammet <baptiste@mailoo.org>, 2019.
+# Baptiste Jammet <baptiste@mailoo.org>, 2019, 2020.
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2019-11-02 22:41+0100\n"
-"PO-Revision-Date: 2019-10-15 11:09+0100\n"
+"PO-Revision-Date: 2020-08-17 10:18+0100\n"
 "Last-Translator: Baptiste Jammet <baptiste@mailoo.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "Language: fr\n"
@@ -218,7 +218,7 @@ msgid ""
 "release updates."
 msgstr ""
 "Deux services existent pour fournir des mises à jour de la distribution : "
-"les mise à jour de sécurité et les mises à jour de la publication."
+"les mises à jour de sécurité et les mises à jour de la publication."
 
 #. Type: multiselect
 #. Description
@@ -288,7 +288,7 @@ msgstr ""
 "Par défaut, les dépôts source sont renseignés dans /etc/apt/sources.list "
 "(avec les lignes «  deb-src » qui leur correspondent) afin que la commande "
 "« apt-get source » puisse fonctionner. Cependant, si vous n'avez pas besoin "
-"de cette fonctionnalité, vous pouvez désactiver ces lignes ce qui limitera "
+"de cette fonctionnalité, vous pouvez désactiver ces lignes, ce qui limitera "
 "l'utilisation de la bande passante lors des actions « apt-get update »."
 
 #. Type: text
@@ -654,7 +654,7 @@ msgid ""
 "different mirror, or ignore the problem and continue without all the "
 "packages from this mirror."
 msgstr ""
-"Le programme d'installation n'a pas pu accéder au  miroir. Cela peut être dû "
+"Le programme d'installation n'a pas pu accéder au miroir. Cela peut être dû "
 "à un problème lié au réseau ou à un problème sur le miroir. Vous pouvez "
 "réessayer le téléchargement, changer de miroir ou ignorer le problème et "
 "continuer avec les paquets récupérés sur ce miroir."
@@ -716,7 +716,7 @@ msgstr ""
 "que ces logiciels ne fassent pas partie de la distribution principale, il "
 "est possible d'utiliser les outils standards de gestion des paquets pour les "
 "installer. Veuillez noter que ces logiciels peuvent être soumis à des "
-"licences qui vous interdisent de les modifier, partager ou même de les "
+"licences qui vous interdisent de les modifier, les partager ou même de les "
 "utiliser."
 
 #. Type: boolean
@@ -767,7 +767,7 @@ msgstr ""
 "est possible d'utiliser les outils standards de gestion des paquets pour les "
 "installer. Veuillez noter que ces logiciels peuvent être soumis à des "
 "licences diverses et parfois à des brevets qui peuvent vous interdire de les "
-"modifier, partager ou même de les utiliser."
+"modifier, les partager ou même de les utiliser."
 
 #. Type: boolean
 #. Description
