--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,29 @@
-apt-setup (1:0.159+kaisen1) kaisen-packages; urgency=medium
+apt-setup (1:0.160+kaisen1) kaisen-packages; urgency=medium
 
   * Import new upstream release
 
- -- Kevin Chevreuil - Kaisen <kaisen@kaisen-linux.org>  Sun, 27 Sep 2020 14:00:56 +0200
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisen-linux.org>  Sat, 07 Nov 2020 15:53:24 +0100
+
+apt-setup (1:0.160) unstable; urgency=medium
+
+  [ Samuel Henrique ]
+  * Remove mention of volatile repo from generated sources.list file.
+    Closes: #954460
+
+  [ Updated translations ]
+  * Bulgarian (bg.po) by Damyan Ivanov
+  * Greek (el.po) by Vangelis Skarmoutsos
+  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
+  * Persian (fa.po) by سهیل خانعلی‌پور
+  * Italian (it.po) by Milo Casagrande
+  * Marathi (mr.po) by Prachi Joshi
+  * Punjabi (Gurmukhi) (pa.po) by Aman ALam
+
+  [ New translations ]
+  * Kabyle (kab.po) by Slimane Selyan Amiri
+  * Occitan (oc.po) by Quentin PAGÈS
+
+ -- Holger Wansing <hwansing@mailbox.org>  Sun, 01 Nov 2020 11:12:07 +0100
 
 apt-setup (1:0.159) unstable; urgency=medium
 
@@ -19,12 +40,6 @@ apt-setup (1:0.159) unstable; urgency=medium
 
  -- Holger Wansing <hwansing@mailbox.org>  Sun, 20 Sep 2020 00:09:42 +0200
 
-apt-setup (1:0.158+kaisen1) kaisen-devel; urgency=medium
-
-  * Import new upstream release 
-
- -- Kevin Chevreuil - Kaisen <kaisen@kaisen-linux.org>  Thu, 16 Jul 2020 15:57:44 +0200
-
 apt-setup (1:0.158) unstable; urgency=medium
 
   * Team upload.
@@ -38,12 +53,6 @@ apt-setup (1:0.158) unstable; urgency=medium
   * Icelandic (is.po) by Sveinn í Felli
 
  -- Holger Wansing <hwansing@mailbox.org>  Sun, 12 Jul 2020 13:38:19 +0200
-
-apt-setup (1:0.157+kaisen1) kaisen-devel; urgency=medium
-
-  * Adapting 91security file for Kaisen Linux (adding personnal repositories)
-
- -- Kevin Chevreuil - Kaisen <kaisen@kaisen-linux.org>  Sat, 16 May 2020 12:04:31 +0200
 
 apt-setup (1:0.157) unstable; urgency=medium
 
