--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -15,6 +15,7 @@
 # Timo Jyrinki <timo.jyrinki@iki.fi>, 2012.
 # Juhani Numminen <juhaninumminen0@gmail.com>, 2018, 2019.
 # Arto Keiski <arto.keiski@iki.fi>, 2018.
+# Kimmo Kujansuu <mrkujansuu@gmail.com>, 2021.
 #
 # Translations from iso-codes:
 # Copyright (C) 2007 Tobias Toedter <t.toedter@gmx.net>.
@@ -27,8 +28,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2019-11-02 22:41+0100\n"
-"PO-Revision-Date: 2019-02-01 20:18+0000\n"
-"Last-Translator: Juhani Numminen <juhaninumminen0@gmail.com>\n"
+"PO-Revision-Date: 2021-07-17 08:34+0000\n"
+"Last-Translator: Kimmo Kujansuu <mrkujansuu@gmail.com>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
@@ -87,7 +88,7 @@ msgstr "Tutkitaan julkaisupäivitysten varastoa..."
 #. :sl2:
 #: ../apt-setup-udeb.templates:7001
 msgid "Scanning the backports repository..."
-msgstr "Tutkitaan kehitysversiosta  vakaaseen tuotujen pakettien varastoa..."
+msgstr "Backports-arkiston skannaus..."
 
 #. Type: select
 #. Choices
@@ -288,9 +289,8 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:1001
-#, fuzzy
 msgid "Scanning the installation media..."
-msgstr "Päätetään asennus"
+msgstr "Haetaan asennusmediaa..."
 
 #. Type: error
 #. Description
@@ -306,12 +306,10 @@ msgstr "Ongelma aptin asetusten teossa"
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:2001 ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid ""
 "An attempt to configure apt to install additional packages from the media "
 "failed."
-msgstr ""
-"aptin asetusten teko lisäpakettien asentamiseksi CD-levyltä epäonnistui."
+msgstr "Yritys määrittää apt asentamaan lisäpaketteja mediasta epäonnistui."
 
 #. Type: boolean
 #. Description
@@ -327,32 +325,29 @@ msgstr ""
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001 ../apt-cdrom-setup.templates:4001
 #: ../apt-cdrom-setup.templates:5001 ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid "Scan extra installation media?"
-msgstr "SILOn asennus epäonnistui"
+msgstr "Haluatko hakea ylimääräisen asennusmedian?"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001
 msgid "Scanning your installation media finds the label:"
-msgstr ""
+msgstr "Asennusmedian haku löysi nimen:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001
-#, fuzzy
 msgid ""
 "You now have the option of scanning additional media for use by the package "
 "manager (apt). Normally these should be from the same set as the one you "
 "booted from. If you do not have any additional media, this step can just be "
 "skipped."
 msgstr ""
-"Nyt voit lisätä CD- tai DVD-levyjä pakettienhallintaohjelman (apt) "
-"käytettäväksi. Normaalisti näiden tulisi olla samasta sarjasta kuin asennus-"
-"CD:n tai -DVD:n. Jos sinulla ei ole lisälevyjä saatavilla, voit ohittaa "
-"tämän vaiheen."
+"Sinulla on nyt mahdollisuus hakea lisämedian paketinhallinnan (apt) "
+"käyttöön. Normaalisti näiden pitäisi olla samasta joukosta kuin se, josta "
+"käynnistit. Jos sinulla ei ole lisämedioita, tämä vaihe voidaan vain ohittaa."
 
 #. Type: boolean
 #. Description
@@ -361,41 +356,36 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001 ../apt-cdrom-setup.templates:4001
-#, fuzzy
 msgid "If you wish to scan more media, please insert another one now."
-msgstr "Jos haluat lisätä toisen CD- tai DVD-levyn, laita se nyt asemaan."
+msgstr "Jos haluat hakea lisää mediaa, aseta toinen nyt."
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:4001
-#, fuzzy
 msgid "The image with the following label has been scanned:"
-msgstr "Lisättiin CD tai DVD, jolla on seuraava nimiö:"
+msgstr "Seuraavan niminen levykuva on haettu:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:5001
-#, fuzzy
 msgid "The image with the following label has already been scanned:"
-msgstr "CD tai DVD, jolla on seuraava nimiö, on jo lisätty:"
+msgstr "Seuraavan niminen levykuva on jo haettu:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:5001
-#, fuzzy
 msgid "Please replace it now, if you wish to scan another."
-msgstr "Jos haluat lisätä toisen CD- tai DVD-levyn, vaihda levy nyt."
+msgstr "Jos haluat lisätä toisen, vaihda se nyt."
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid "Please check that the media has been inserted correctly."
-msgstr "Tarkista, että CD tai DVD on laitettu asemaan kunnolla."
+msgstr "Tarkista, että media on asetettu oikein."
 
 #. Type: text
 #. Description
@@ -408,10 +398,8 @@ msgstr "Taltion vaihto"
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:7001
-#, fuzzy
 msgid "Please insert the media labeled '${LABEL}' and press enter."
-msgstr ""
-"/cdrom/: Laita levy nimeltä ”${LABEL}” asemaan ”/cdrom/” ja paina Enteriä."
+msgstr "Aseta media, jonka nimi on \"${LABEL}\", ja paina enter-näppäintä."
 
 #. Type: text
 #. Description
@@ -428,7 +416,6 @@ msgstr "Poistetaan käytöstä netinst-CD tiedostossa sources.list..."
 #. Description
 #. :sl2:
 #: ../apt-cdrom-setup.templates:9001 ../apt-mirror-setup.templates:6001
-#, fuzzy
 msgid ""
 "If you are installing from a netinst CD image and choose not to use a "
 "mirror, you will end up with only a very minimal base system."
@@ -440,38 +427,36 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:10001
-#, fuzzy
 msgid ""
 "You are installing from a netinst CD image, which by itself only allows "
 "installation of a very minimal base system. Use a mirror to install a more "
 "complete system."
 msgstr ""
-"Asennusta ollaan tekemässä verkkoasennus-CD-levyltä, joka itsessään "
-"mahdollistaa vain hyvin minimaalisen perusjärjestelmän asennuksen. Käytä "
-"peilipalvelinta täydellisemmän järjestelmän asentamiseksi."
+"Asennat netinst CD-levyn kuvasta, joka itsessään mahdollistaa vain hyvin "
+"minimaalisen perusjärjestelmän asentamisen. Käytä pakettivaraston peiliä "
+"täydellisemmän järjestelmän asentamiseen."
 
 #. Type: text
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:11001
-#, fuzzy
 msgid ""
 "You are installing from an image which contains a limited selection of "
 "packages."
-msgstr "Olet asentamassa CD-levyltä, jolla on rajallinen valikoima paketteja."
+msgstr "Asennat levykuvasta, joka sisältää rajoitetun valikoiman paketteja."
 
 #. Type: text
 #. Description
 #. :sl1:
 #. The value of %i can be 2 or 3
 #: ../apt-cdrom-setup.templates:12001
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "You have scanned %i images. Even though these contain a fair selection of "
 "packages, some may be missing (notably some packages needed to support "
 "languages other than English)."
 msgstr ""
-"Olet lisännyt %i CD-levyä. Vaikka ne sisältävät kohtalaisen valikoiman "
+"Olet lisännyt %i levykuviaa. Vaikka ne sisältävät kohtalaisen valikoiman "
 "paketteja, joitain saattaa puuttua (etenkin paketteja, joita tarvitaan "
 "tukemaan muita kieliä kuin englantia)."
 
@@ -480,13 +465,13 @@ msgstr ""
 #. :sl1:
 #. The value of %i can be from 4 to 8
 #: ../apt-cdrom-setup.templates:13001
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "You have scanned %i images. Even though these contain a large selection of "
 "packages, some may be missing."
 msgstr ""
-"Olet lisännyt %i CD-levyä. Vaikka ne sisältävät laajan valikoiman paketteja, "
-"joitain saattaa puuttua."
+"Olet lisännyt %i levykuvaa. Vaikka ne sisältävät laajan valikoiman "
+"paketteja, joitain saattaa puuttua."
 
 #. Type: text
 #. Description
@@ -503,12 +488,11 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:15001
-#, fuzzy
 msgid ""
 "You are installing from a DVD image. Even though it contains a large "
 "selection of packages, some may be missing."
 msgstr ""
-"Olet asentamassa DVD-levyltä. Vaikka DVD sisältää suuren valikoiman "
+"Olet asentamassa DVD-levyltä. Vaikka se sisältää suuren valikoiman "
 "paketteja, joitain saattaa puuttua."
 
 #. Type: text
@@ -666,14 +650,13 @@ msgstr "Käytetäänkö asennuspalvelimen kopiota?"
 #. Description
 #. :sl1:
 #: ../apt-mirror-setup.templates:5001
-#, fuzzy
 msgid ""
 "A network mirror can be used to supplement the software that is included on "
 "the installation media. This may also make newer versions of software "
 "available."
 msgstr ""
-"Asennuspalvelimen kopiota voidaan käyttää täydentämään CD-levyillä olevaa "
-"ohjelmavalikoimaa. Saatavilla voi olla myös uudempia versioita ohjelmista."
+"Asennuspalvelimen kopiota voidaan käyttää täydentämään asennusmedialla "
+"olevaa ohjelmistoa. Saatavilla voi olla myös uudempia versioita ohjelmista."
 
 #. Type: boolean
 #. Description
