--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+apt-setup (1:0.167-1kaisen) kaisen-packages; urgency=medium
+
+  * Import new upstream release
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Sat, 09 Oct 2021 21:57:58 +0200
+
+apt-setup (1:0.167) unstable; urgency=medium
+
+  * Team upload
+
+  [ Raphaël Hertzog ]
+  * Replace deprecated tempfile with mktemp.
+
+  [ Philip Hands ]
+  * Switch to using branch2repo for Salsa CI.
+
+  [ Updated translations ]
+  * Vietnamese (vi.po) by Tran Dinh Hai
+
+ -- Holger Wansing <hwansing@mailbox.org>  Wed, 22 Sep 2021 20:12:18 +0200
+
 apt-setup (1:0.166-1kaisen) kaisen-packages; urgency=medium
 
   * Import new upstream release
