--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+apt-setup (1:0.169-1kaisen) kaisen-packages; urgency=medium
+
+  * Import new upstream release
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Mon, 15 Aug 2022 14:12:58 +0100
+
+apt-setup (1:0.169) unstable; urgency=medium
+
+  * Team upload
+
+  [ Updated translations ]
+  * Bosnian (bs.po) by Amar Tufo
+  * Basque (eu.po) by Gontzal Manuel Pujana Onaindia
+  * Norwegian Nynorsk (nn.po) by aujawindar
+  * Polish (pl.po) by Matthaiks
+  * Simplified Chinese (zh_CN.po) by Wenbin Lv
+
+ -- Holger Wansing <hwansing@mailbox.org>  Sun, 26 Jun 2022 12:33:15 +0200
+
 apt-setup (1:0.168-1kaisen) kaisen-packages; urgency=medium
 
   * Import new upstream release
