--- a/debian/po/nn.po
+++ b/debian/po/nn.po
@@ -11,6 +11,7 @@
 # Eirik U. Birkeland <eirbir@gmail.com>, 2010.
 # Allan Nordhøy <epost@anotheragency.no>, 2017.
 # Alexander Jansen <bornxlo@gmail.com>, 2018.
+# aujawindar <eivind.odegard@sogn.no>, 2022.
 #
 # Translations from iso-codes:
 #   Alastair McKinstry <mckinstry@computer.org>, 2001.
@@ -26,8 +27,8 @@ msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2019-11-02 22:41+0100\n"
-"PO-Revision-Date: 2019-08-28 18:10+0000\n"
-"Last-Translator: leela <53352@protonmail.com>\n"
+"PO-Revision-Date: 2022-04-23 23:30+0000\n"
+"Last-Translator: aujawindar <eivind.odegard@sogn.no>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
 "Language: nn\n"
 "MIME-Version: 1.0\n"
@@ -78,17 +79,15 @@ msgstr "Søkjer gjennom arkivet for tryggleiksoppdateringar ..."
 #. Description
 #. :sl2:
 #: ../apt-setup-udeb.templates:6001
-#, fuzzy
 msgid "Scanning the release updates repository..."
-msgstr "Søkjer gjennom arkivet for volatile opptaderingar ..."
+msgstr "Søkjer gjennom arkivet for utgjevingsopptaderingar ..."
 
 #. Type: text
 #. Description
 #. :sl2:
 #: ../apt-setup-udeb.templates:7001
-#, fuzzy
 msgid "Scanning the backports repository..."
-msgstr "Søkjer gjennom arkivet for volatile opptaderingar ..."
+msgstr "Søkjer gjennom arkivet for tilbakeførte opptaderingar ..."
 
 #. Type: select
 #. Choices
@@ -185,9 +184,8 @@ msgstr "tryggleiksoppdateringar (frå ${SEC_HOST})"
 #. including host name. In short, KEEP THIS SHORT and, yes, that's tricky
 #. :sl1:
 #: ../apt-setup-udeb.templates:11001
-#, fuzzy
 msgid "release updates"
-msgstr "Slett data:"
+msgstr "oppdateringar"
 
 #. Type: multiselect
 #. Choices
@@ -196,9 +194,8 @@ msgstr "Slett data:"
 #. including host name. In short, KEEP THIS SHORT and, yes, that's tricky
 #. :sl1:
 #: ../apt-setup-udeb.templates:11001
-#, fuzzy
 msgid "backported software"
-msgstr "Bruk tilbakeført programvare?"
+msgstr "tilbakeført programvare"
 
 #. Type: multiselect
 #. Description
@@ -211,13 +208,12 @@ msgstr "Tenester som skal brukast:"
 #. Description
 #. :sl1:
 #: ../apt-setup-udeb.templates:11002
-#, fuzzy
 msgid ""
 "Debian has two services that provide updates to releases: security and "
 "release updates."
 msgstr ""
 "Debian har to tenester som sørgjer for oppdaterte installasjonar: "
-"tryggleiksoppdateringar og volatile oppdateringar."
+"tryggleiksoppdateringar og utgjevingsoppdateringar."
 
 #. Type: multiselect
 #. Description
@@ -234,24 +230,21 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-setup-udeb.templates:11002
-#, fuzzy
 msgid ""
 "Release updates provide more current versions for software that changes "
 "relatively frequently and where not having the latest version could reduce "
 "the usability of the software. It also provides regression fixes. This "
 "service is only available for stable and oldstable releases."
 msgstr ""
-"Volatile oppdateringar sørgjer for oppdaterte versjonar av programvare som "
+"Utgjevingsoppdateringar sørgjer for oppdaterte versjonar av programvare som "
 "endrar seg raskt, og der det å ikkje ha siste versjonen vil redusere "
-"nytteverdien av programmet. Eit døme er virussignaturar for ein virusfinnar. "
-"Denne tenesta er berre tilgjengeleg for versjonar som er merkte stable og "
-"oldstable."
+"nytteverdien av programmet. Her er òg tilbakeføringsrettingar. Denne tenesta "
+"er berre tilgjengeleg for versjonar som er merkte stable og oldstable."
 
 #. Type: multiselect
 #. Description
 #. :sl1:
 #: ../apt-setup-udeb.templates:11002
-#, fuzzy
 msgid ""
 "Backported software are adapted from the development version to work with "
 "this release. Although this software has not gone through such complete "
@@ -260,17 +253,20 @@ msgid ""
 "not cause any of them to be installed by default; it only allows you to "
 "manually select backports to use."
 msgstr ""
-"Nokre program er tilbakeført frå utviklingstreet for å fungere med denne "
+"Tilbakeførte program kjem frå utviklingsversjonen for å fungere med denne "
 "utgåva. Sjølv om desse programma ikkje har gått gjennom slik testing som "
 "program som er med i distrubisjonen, kan det vere nyare versjonar av nokre "
-"program som kan innehalde nyttige forbetringar er tilgjengeleg."
+"program som kan innehalde nyttige forbetringar er tilgjengeleg. Viss du "
+"skrur på tilbakeførte program vil ingen av dei bli installerte automatisk, "
+"det blir berre mogleg for deg å velje manuelt kva tilbakeførte versjonar du "
+"vil bruke."
 
 #. Type: boolean
 #. Description
 #. :sl3:
 #: ../apt-setup-udeb.templates:12001
 msgid "Enable source repositories in APT?"
-msgstr ""
+msgstr "Bruk kjeldearkiv i APT?"
 
 #. Type: boolean
 #. Description
@@ -282,14 +278,17 @@ msgid ""
 "you don't need this feature, you can disable those entries and save some "
 "bandwidth during \"apt-get update\" operations."
 msgstr ""
+"Vanlegvis står kjeldearkiv i /etc/apt/sources.list-fila (med \"deb-src\" "
+"føre) slik at \"apt-get source\" verkar. Viss du ikkje treng denne "
+"funksjonen, kan du skru av kjeldeoppfringane og spara litt bandbreidd når du "
+"utfører \"apt-get update\"-handlingar."
 
 #. Type: text
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:1001
-#, fuzzy
 msgid "Scanning the installation media..."
-msgstr "Fullfører installasjonen"
+msgstr "Ser gjennom installasjonsmedia..."
 
 #. Type: error
 #. Description
@@ -305,12 +304,11 @@ msgstr "problem med apt-oppsettet"
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:2001 ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid ""
 "An attempt to configure apt to install additional packages from the media "
 "failed."
 msgstr ""
-"Eit forsøk på å setje opp apt til å installere tilleggspakkar frå CD "
+"Eit forsøk på å setje opp apt til å installere tilleggspakkar frå mediet "
 "mislukkast."
 
 #. Type: boolean
@@ -327,9 +325,8 @@ msgstr ""
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001 ../apt-cdrom-setup.templates:4001
 #: ../apt-cdrom-setup.templates:5001 ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid "Scan extra installation media?"
-msgstr "Installasjon av SILO feila"
+msgstr "Sjå gjennom ekstra installasjonsmedia?"
 
 #. Type: boolean
 #. Description
@@ -337,22 +334,22 @@ msgstr "Installasjon av SILO feila"
 #: ../apt-cdrom-setup.templates:3001
 msgid "Scanning your installation media finds the label:"
 msgstr ""
+"Me fann denne merkelappen då me skanna gjennom installasjonsmediet ditt:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001
-#, fuzzy
 msgid ""
 "You now have the option of scanning additional media for use by the package "
 "manager (apt). Normally these should be from the same set as the one you "
 "booted from. If you do not have any additional media, this step can just be "
 "skipped."
 msgstr ""
-"Du har no høve til å sjå gjennom fleire CDar eller DVDar for at "
-"pakkehandteraren (apt) skal kunne bruke dei. Vanlegvis så skal desse vere "
-"frå same settet som installasjonsCDen/DVDen. Viss du ikkje har fleire CDar "
-"eller DVDar tilgjengeleg, så kan du berre hoppe over dette steget."
+"Du har no høve til å sjå gjennom fleire lagringsmedium for at "
+"pakkehandteraren (apt) skal kunne bruke dei. Vanlegvis skal desse vere frå "
+"same settet som den du starta opp frå. Viss du ikkje har fleire "
+"lagringsmedium, så kan du berre hoppe over dette steget."
 
 #. Type: boolean
 #. Description
@@ -361,41 +358,37 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:3001 ../apt-cdrom-setup.templates:4001
-#, fuzzy
 msgid "If you wish to scan more media, please insert another one now."
-msgstr "Viss du vil sjå gjennom ein CD eller DVD til, så set han inn no."
+msgstr ""
+"Viss du vil sjå gjennom fleire lagringsmedium, kan du setje inn eit no."
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:4001
-#, fuzzy
 msgid "The image with the following label has been scanned:"
-msgstr "CDen eller DVDen med denne merkelappen er gjennomsøkt:"
+msgstr "Biletet med denne merkelappen er gjennomsøkt:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:5001
-#, fuzzy
 msgid "The image with the following label has already been scanned:"
-msgstr "CDen eller DVDen med denne merkelappen er allereie gjennomsøkt:"
+msgstr "Biletet med denne merkelappen er allereie gjennomsøkt:"
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:5001
-#, fuzzy
 msgid "Please replace it now, if you wish to scan another."
-msgstr "Byt ut CDen eller DVDen no viss du vil sjå gjennom ein til."
+msgstr "Byt ut no viss du vil sjå gjennom ein til."
 
 #. Type: boolean
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:6001
-#, fuzzy
 msgid "Please check that the media has been inserted correctly."
-msgstr "Sjå etter at CDen/DVDen er sett inn rett."
+msgstr "Sjå etter at lagringsmediet er sett inn rett."
 
 #. Type: text
 #. Description
@@ -408,11 +401,8 @@ msgstr "Byte disk"
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:7001
-#, fuzzy
 msgid "Please insert the media labeled '${LABEL}' and press enter."
-msgstr ""
-"/cdrom/: Set inn disken med merkelappen «${LABEL}» i stasjonen «/cdrom/» og "
-"trykk enter."
+msgstr "Set inn mediet med merkelappen «${LABEL}» og trykk enter."
 
 #. Type: text
 #. Description
@@ -429,25 +419,23 @@ msgstr "Kommenterer ut netinst CD i sources.list ..."
 #. Description
 #. :sl2:
 #: ../apt-cdrom-setup.templates:9001 ../apt-mirror-setup.templates:6001
-#, fuzzy
 msgid ""
 "If you are installing from a netinst CD image and choose not to use a "
 "mirror, you will end up with only a very minimal base system."
 msgstr ""
-"Viss du installerer frå ein netinst-CD og du vel å ikkje bruke eit "
+"Viss du installerer frå eit netinst-bilete og du vel å ikkje bruke eit "
 "nettarkiv, vil du ende opp med eit minimalt grunnsystem."
 
 #. Type: text
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:10001
-#, fuzzy
 msgid ""
 "You are installing from a netinst CD image, which by itself only allows "
 "installation of a very minimal base system. Use a mirror to install a more "
 "complete system."
 msgstr ""
-"Du installerer frå ein nettinstallasjons-CD. Denne installerer berre eit "
+"Du installerer frå eit nettinstallasjons-avtrykk. Det installerer berre eit "
 "minimalt grunnsystem. For å installere eit meir komplett system må du bruke "
 "eit nettarkiv."
 
@@ -455,39 +443,39 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:11001
-#, fuzzy
 msgid ""
 "You are installing from an image which contains a limited selection of "
 "packages."
-msgstr "Du installerer frå ein CD, som inneheld eit avgrensa utval av pakkar."
+msgstr ""
+"Du installerer frå eit filavtrykk som inneheld eit avgrensa utval av pakkar."
 
 #. Type: text
 #. Description
 #. :sl1:
 #. The value of %i can be 2 or 3
 #: ../apt-cdrom-setup.templates:12001
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "You have scanned %i images. Even though these contain a fair selection of "
 "packages, some may be missing (notably some packages needed to support "
 "languages other than English)."
 msgstr ""
-"Du har søkt gjennom %i CDar. Sjølv om desse inneheld eit stort utval av "
-"pakkar, så kan det mangle nokre (spesielt pakkar for støtte av andre språk "
-"enn engelsk)."
+"Du har søkt gjennom %i filavtrykk. Sjølv om desse inneheld eit stort utval "
+"av pakkar, så kan det mangle nokre (spesielt pakkar for støtte av andre "
+"språk enn engelsk)."
 
 #. Type: text
 #. Description
 #. :sl1:
 #. The value of %i can be from 4 to 8
 #: ../apt-cdrom-setup.templates:13001
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "You have scanned %i images. Even though these contain a large selection of "
 "packages, some may be missing."
 msgstr ""
-"Du har søkt gjennom %i CDar. Sjølv om desse inneheld eit stort utval av "
-"pakkar, så kan det mangle nokre."
+"Du har søkt gjennom %i filavtrykk. Sjølv om desse inneheld eit stort utval "
+"av pakkar, så kan det mangle nokre."
 
 #. Type: text
 #. Description
@@ -504,7 +492,6 @@ msgstr ""
 #. Description
 #. :sl1:
 #: ../apt-cdrom-setup.templates:15001
-#, fuzzy
 msgid ""
 "You are installing from a DVD image. Even though it contains a large "
 "selection of packages, some may be missing."
@@ -666,14 +653,13 @@ msgstr "Bruk eit nettarkiv?"
 #. Description
 #. :sl1:
 #: ../apt-mirror-setup.templates:5001
-#, fuzzy
 msgid ""
 "A network mirror can be used to supplement the software that is included on "
 "the installation media. This may also make newer versions of software "
 "available."
 msgstr ""
 "Eit nettarkiv kan brukast for å supplere programvaren som er inkludert på "
-"CDen. Dette kan også gjere nyare versjonar av programma tilgjengelege."
+"installasjonsmediet. Dette kan også gje nyare versjonar av programma."
 
 #. Type: boolean
 #. Description
