Import the 0.178 version. Add many patchs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,31 @@
+apt-setup (1:0.178-1kaisen) kaisen-packages; urgency=medium
+
+  * Import the 0.178 release
+  * Add thz following patchs:
+    - 002-deletion-of-the-component-var
+    - 003-disable-cd-count
+    - 004-remove-all-comments-and-empty-lines-final-source-list
+
+ -- Kevin Chevreuil - Kaisen <kaisen@kaisenlinux.org>  Sun, 26 Mar 2023 07:23:44 +0100
+
+apt-setup (1:0.178) unstable; urgency=medium
+
+  * Team upload
+
+  [ Cyril Brulebois ]
+  * Fix regression in Spanish translation (Closes: #1032219).
+
+  [ Updated translations ]
+  * Indonesian (id.po) by Andika Triwidada
+  * Icelandic (is.po) by Sveinn í Felli
+  * Georgian (ka.po) by Temuri Doghonadze
+  * Portuguese (pt.po) by Miguel Figueiredo
+  * Sinhala (si.po) by HelaBasa Group
+  * Turkish (tr.po) by Fatih Altun
+  * Vietnamese (vi.po) by tictactoe
+
+ -- Holger Wansing <hwansing@mailbox.org>  Mon, 13 Mar 2023 11:51:55 +0100
+
 apt-setup (1:0.177-1kaisen) kaisen-packages; urgency=medium
 
   * Import the 0.177 release
